--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="data analytics website by damlek1"
+      content="data analytics website by oluwasegun"
     />
     <link rel="shortcut icon" href="./images/logo.png" />
     <link rel="apple-touch-icon" href="./images/logo.png" />
